--- a/templates/components/results.html
+++ b/templates/components/results.html
@@ -1,10 +1,12 @@
 {% if results %}
 <div class="space-y-4">
     <div class="flex justify-between items-center mb-2">
-        <p class="text-sm text-slate-600 font-medium">Found {{ results|length }} results</p>
+        <p class="text-sm text-slate-600 font-medium">Found {{ results|length }}
+            results</p>
     </div>
     {% for item in results %}
-    <div class="h-full bg-white rounded-xl shadow-sm hover:shadow-xl p-3 sm:p-4 lg:p-6 border border-slate-100 
+    <div
+        class="h-full bg-white rounded-xl shadow-sm hover:shadow-xl p-3 sm:p-4 lg:p-6 border border-slate-100 
         hover:border-purple-300 group transition-all duration-300 ease-in-out transform hover:-translate-y-1 
         hover:bg-gradient-to-r from-purple-50 to-white">
         <div class="flex justify-between items-start">
@@ -13,13 +15,19 @@
                     class="text-lg sm:text-xl lg:text-2xl font-medium text-slate-800 group-hover:text-purple-600 transition-colors">
                     {{ item.city_municipality}}
                 </h3>
-                <p class="text-slate-600 mt-2 group-hover:text-slate-700 transition-colors">{{ item.province }}</p>
-                <p class="text-slate-500 text-sm mt-1 group-hover:text-slate-600 transition-colors">{{ item.region}}</p>
+                <p
+                    class="text-slate-600 mt-2 group-hover:text-slate-700 transition-colors">{{
+                    item.province }}</p>
+                <p
+                    class="text-slate-500 text-sm mt-1 group-hover:text-slate-600 transition-colors">{{
+                    item.region}}</p>
             </div>
             <div class="text-right">
-                <div class="flex items-center bg-purple-50 px-3 py-1 rounded-full cursor-pointer 
+                <div
+                    class="flex items-center bg-purple-50 px-3 py-1 rounded-full cursor-pointer 
                     hover:bg-purple-100 transition-all duration-300 group-hover:shadow-md">
-                    <img src="/static/icons/mailbox.svg" class="w-4 h-4 mr-1 filter-purple">
+                    <img src="/static/icons/mailbox.svg"
+                        class="w-4 h-4 mr-1 filter-purple">
                     <span class="text-lg font-mono text-purple-700">
                         {{ item.code }}
                     </span>
