--- a/templates/contact.html
+++ b/templates/contact.html
@@ -12,20 +12,17 @@
     <div class="flex justify-center space-x-8 mb-8">
         <a href="https://github.com/jayson-panganiban" target="_blank"
             class="flex items-center text-slate-700 hover:text-purple-700 transition-colors duration-200">
-            <img src="/static/icons/github.svg"
-                class="w-6 h-6 mr-2 filter-purple" alt="GitHub icon">
+            <img src="/static/icons/github.svg" class="w-6 h-6 mr-2 filter-purple" alt="GitHub icon">
             GitHub
         </a>
         <a href="https://linkedin.com/in/jayson-panganiban" target="_blank"
             class="flex items-center text-slate-700 hover:text-purple-700 transition-colors duration-200">
-            <img src="/static/icons/linkedin.svg"
-                class="w-6 h-6 mr-2 filter-purple" alt="LinkedIn icon">
+            <img src="/static/icons/linkedin.svg" class="w-6 h-6 mr-2 filter-purple" alt="LinkedIn icon">
             LinkedIn
         </a>
         <a href="mailto:jsoncp@proton.me"
             class="flex items-center text-slate-700 hover:text-purple-700 transition-colors duration-200">
-            <img src="/static/icons/email.svg"
-                class="w-6 h-6 mr-2 filter-purple" alt="Email icon">
+            <img src="/static/icons/email.svg" class="w-6 h-6 mr-2 filter-purple" alt="Email icon">
             Email
         </a>
     </div>
